#1 An endpoint to create an Issue

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
-# The ID of your GitHub App
 APP_ID=
-WEBHOOK_SECRET=development
+WEBHOOK_SECRET=
+PRIVATE_KEY=
+CLIENT_ID=
+CLIENT_SECRET=
+INSTALLATION_ID=
+REPO_OWNER=
+REPO=
 
 # Use `trace` to get verbose logging or `info` to show less
 LOG_LEVEL=debug
