--- a/package.json
+++ b/package.json
@@ -23,12 +23,19 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
+    "@octokit/auth-app": "^2.4.6",
+    "@types/body-parser": "^1.19.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/supertest": "^2.0.9",
+    "body-parser": "^1.19.0",
+    "jsonwebtoken": "^8.5.1",
     "probot": "^9.5.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/jest": "^25.1.0",
     "@types/nock": "^11.1.0",
-    "@types/node": "^13.1.0",
+    "@types/node": "^13.13.9",
     "@typescript-eslint/parser": "^2.4.0",
     "eslint-plugin-typescript": "^0.14.0",
     "jest": "^24.9.0",
@@ -36,6 +43,7 @@
     "nodemon": "^2.0.0",
     "smee-client": "^1.1.0",
     "standard": "^14.3.1",
+    "supertest": "^4.0.2",
     "ts-jest": "^25.1.0",
     "typescript": "^3.6.4"
   },
